@@ -7,8 +7,8 @@ import com.google.gson.GsonBuilder;
 import com.google.gson.JsonObject;
 import com.google.gson.JsonParser;
 import lol.aabss.skuishy.Skuishy;
-import lol.aabss.skuishy.other.mineskin.Variant;
 import org.jetbrains.annotations.NotNull;
+import org.mineskin.data.Variant;
 
 import javax.annotation.Nullable;
 import javax.imageio.ImageIO;
@@ -17,6 +17,7 @@ import java.awt.image.BufferedImage;
 import java.io.File;
 import java.io.FileWriter;
 import java.io.IOException;
+import java.net.URI;
 import java.net.URL;
 import java.util.Scanner;
 
@@ -26,7 +27,7 @@ import static lol.aabss.skuishy.Skuishy.last_blueprint;
 public class Blueprint {
 
     private BufferedImage image = null;
-    private @NotNull Variant model = null;
+    private @NotNull Variant model = Variant.AUTO;
     public static JsonObject json;
     public static Gson gson = new GsonBuilder().setPrettyPrinting().create();
 
@@ -66,7 +67,7 @@ public class Blueprint {
 
     public Blueprint(String player) {
         try {
-            this.image = ImageIO.read(new URL("https://minotar.net/skin/"+player));
+            this.image = ImageIO.read(URI.create("https://minotar.net/skin/" + player).toURL());
             this.model = getVariant(image);
         } catch (IOException e) {
             Skuishy.Logger.exception(e);
@@ -205,11 +206,15 @@ public class Blueprint {
             return null;
         }
         try {
-            return new Blueprint(ImageIO.read(file), Variant.valueOf(getJson().get(name).getAsString()));
+            JsonObject json = getJson();
+            if (json != null && json.has(name)) {
+                return new Blueprint(ImageIO.read(file), Variant.valueOf(getJson().get(name).getAsString()));
+            }
         } catch (IOException e){
             Skuishy.Logger.exception(e);
             return null;
         }
+        return null;
     }
 
     public static void delete(String name) {
